--- a/package.json
+++ b/package.json
@@ -14,7 +14,12 @@
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "gravatar": "^1.6.0",
+    "jsonwebtoken": "^8.3.0",
     "mongoose": "^5.2.10",
-    "nodemon": "^1.18.3"
+    "nodemon": "^1.18.3",
+    "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
+    "validator": "^10.7.0"
   }
 }
